fix(Hatnote): fix icon alignment

--- a/Hatnote/styles.css
+++ b/Hatnote/styles.css
@@ -12,6 +12,7 @@
 }
 
 .hatnote-icon img {
+    display: block;
     width: var( --font-size-small );
     height: auto;
     margin-right: var( --space-xs );
